frontend/src/styles/global.css
@import "tailwindcss";

@theme {
  --color-background: #FFFFFF;
  --color-foreground: #D9D9D9;
  --color-lightforeground: var(--color-gray-200);
  --color-primary: #C8BCF6;
  --color-secondary: #cacaca;
  --color-font: var(--color-black);
  --color-contrast: #000000; 
  --color-error: #f51936;
  --color-success: var(--color-green-600);
  --color-info: var(--color-blue-600);

}

/* Dark theme overrides */
[data-theme="dark"] {
  --color-background: #222323;
  --color-foreground: #292a2a;
  --color-lightforeground: #3d3e3e;
  --color-primary: #dddddd;
  --color-secondary: #4A4A4A;
  --color-font: var(--color-white);
  --color-contrast: #FFFFFF;
  --color-error: #f51936;
  --color-success: var(--color-green-400);
  --color-info: var(--color-blue-400);
}

html,body{
  width: 100vw;
  height: 100vh;
  display: flex;
  overflow: hidden;
  flex-direction: row;
  font-family: "Notable", sans-serif;
  font-weight: 600;
  color: var(--color-font);
  font-style: normal;
  font-size: small;
}

/*Scrollbar css design*/
/* width */
::-webkit-scrollbar {
  width: 8px;
}

/* Track */
::-webkit-scrollbar-track {
  background: var(--color-background);
  border-radius: 8px;
  margin-top: 2px;
  margin-bottom: 2px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--color-secondary);
  border-radius: 8px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--color-contrast);
}

